global body overflow fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,12 +10,25 @@
 .main {
   padding: 5rem 0;
   flex: 1;
+  height:20px;
+  margin-bottom:2em;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border:2px solid red; 
 }
+.btn_container{
 
+  height:30px;
+  margin-bottom:2em;
+  display: flex;
+  padding:5rem 4em;
+  
+  width:100%;
+ 
+  border:2px solid red; 
+}
 .footer {
   width: 100%;
   height: 100px;
